# BonGusto_Django

./: .env.example  .gitignore  Procfile  README.md  bongusto_dump.sql  load_test.js  manage.py  pyproject.toml  requirements.txt
src/bongusto/: __init__.py  main.py  wsgi.py
src/bongusto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bongusto/application/: services.py
src/bongusto/domain/: apps.py  models.py
src/bongusto/domain/migrations/: 0001_initial.py  0002_initial.py
src/bongusto/infrastructure/: asgi.py  pdf_generator.py  routing.py  settings.py
src/bongusto/interfaces/: apps.py  urls.py
src/bongusto/interfaces/views/: __init__.py
src/bongusto/modules/: __init__.py
src/bongusto/modules/auth/: __init__.py  admin.py  apps.py  email_backends.py  forms.py  models.py  services.py  tests.py  views.py
src/bongusto/modules/bitacora/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  tests.py  views.py
src/bongusto/modules/calificaciones/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  tests.py  views.py
src/bongusto/modules/categorias/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  tests.py  views.py
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_email.txt  password_reset_form.html  password_reset_subject.txt
tests/: test_module_integrations.py  test_module_units.py  test_services.py  test_views.py
tests/fixtures/import/: menus.xlsx  musica.xlsx  productos.xlsx
(+181 files in other folders)
