[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bongusto"
version = "1.0.0"
description = "BonGusto Gastrobar - Sistema de Gestión"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg[binary]>=3.1",
    "channels>=4.0",
    "channels-redis>=4.2",
    "daphne>=4.0",
    "reportlab>=4.0",
    "pillow>=10.0",
    "openpyxl>=3.1",
    "redis>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
